@@ -121,17 +121,6 @@
     <build>
         <plugins>
             <!-- Compiler Plugin for Java 23 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <release>23</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
 
             <!-- Spring Boot Plugin -->
             <plugin>
